--- a/history.css
+++ b/history.css
@@ -42,3 +42,42 @@ font-size: 30px;
 .historyCards{
     display: flex;
 }
+
+.card{
+background-color: white;
+width:200px;
+height: 250px;
+margin: 10px;
+padding: 10px;
+border : 1px solid black;
+position: relative;
+}
+
+.theBtn{
+    cursor : pointer;
+    background-color: white;
+    color: black;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top:230px;
+    right: 10px;
+
+}
+.title{
+    font-size : 20px;
+    font-weight : 700;
+    font-family : "Verdana, Geneva, Tahoma, sans-serif";
+    color : rgb(43,42,42);
+}
+.description{
+    font-size : 17px;
+    font-family : "Verdana, Geneva, Tahoma, sans-serif";
+    color : rgb(43,42,42);
+    max-height: 170px;
+    overflow: scroll;
+}
+
+
+
+
