--- a/history.css
+++ b/history.css
@@ -1,42 +1,52 @@
 body{
-    margin: 0%;
+    margin: 0;
+    padding: 0;
     background-color:rgb(211, 109, 6);
 }
 
 nav{
-border:2px solid rgb(11, 115, 207);
-height: 100px;  
-padding:5px;
-background-color:white;
-display: flex;
-}
+    border:2px solid rgb(11, 115, 207);
+    width: 100%;
+    height: 80px;  
+    background-color:white;
+    display: flex;
+    align-items:center;
+    padding: 10px;
+    }
+    
+    nav img {
+        max-width: 100px;
+    }
+    
+    nav h1{
+    margin-top: 30px;
+    color: rgb(11, 115, 207);
+    font-size: 27px;
+    margin: 0;
+    padding: 0;
+    flex-grow: 1;
+    text-align:left;
+    }
 
-nav img{
-    height: 100px;
-}
-
-nav h1{
-margin-top: 30px;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-color: rgb(11, 115, 207);
-font-size: 30px;
-}
 #searchButton{
-   margin-top: 15px;
-   margin-left: 950px;
-   background-color:rgb(255, 204, 0);
-   border: 1px solid rgb(255, 204, 0);
-   border-radius: 50px;
-   width: 130px;
-   height: 60px;
+    margin-right: 5%;
+    background-color:rgb(255, 204, 0);
+    border: 1px solid rgb(255, 204, 0);
+    border-radius: 50px;
+    width: 140px;
+    height: 60px;
+    padding: 8px 16px;
+    display: inline-block;
+    cursor: pointer;
 }
 
 #searchButton a{
     color: rgb(21, 134, 232);
-    text-decoration: none;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
-    font-weight: bold;
+                text-decoration: none;
+                font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+                font-size: 20px;
+                font-weight: bold;
+                text-align: center;
 }
 
 .historyCards{
